# tuical

./: .gitignore  Cargo.toml  config.example.toml
src/: app.rs  config.rs  main.rs  model.rs  settings.rs
src/provider/: google.rs  ical.rs  mod.rs
src/ui/: mod.rs
